<resources>
    <string name="app_name">FirebaseTestApp</string>
    <string name="title_activity_part_one">PartOneActivity</string>
    <string name="title_activity_part_two">PartTwoActivity</string>
    <string name="title_list">Список</string>
    <string name="title_map">Карта</string>
    <string name="title_profile">Профиль</string>

    <string name="no_items_message">НЕТ НИ ОДНОЙ ТОЧКИ</string>

    <!-- Sing up -->
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="already_question">Already have account? </string>
    <string name="sign_in">Sign In</string>
    <string name="write_here">Write here</string>
</resources>
