<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sing_up_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:src="@drawable/sing_up_color_layer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="46dp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="37dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="29sp" />

            <TextView
                style="@style/SingUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="103dp"
                android:text="@string/username" />

            <EditText
                style="@style/SingUpEditText"
                android:hint="@string/write_here"
                android:inputType="text"
                tools:text="sandeepkasundra" />

            <View style="@style/DividerStyle" />

            <TextView
                style="@style/SingUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/email" />

            <EditText
                style="@style/SingUpEditText"
                android:hint="@string/write_here"
                android:inputType="textEmailAddress"
                tools:text="sandeepkasundra@gmail.com" />

            <View style="@style/DividerStyle" />

            <TextView
                style="@style/SingUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/password" />

            <EditText
                style="@style/SingUpEditText"
                android:layout_marginBottom="40dp"
                android:hint="@string/write_here"
                android:inputType="textPassword"
                tools:text="password" />

            <View style="@style/DividerStyle" />

            <TextView
                style="@style/SingUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/confirm_password" />

            <EditText
                style="@style/SingUpEditText"
                android:layout_marginBottom="40dp"
                android:hint="@string/write_here"
                android:inputType="textPassword"
                tools:text="password" />

            <View
                style="@style/DividerStyle"
                android:layout_marginBottom="38dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="39dp"
                android:layout_marginEnd="33dp"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="33dp"
                android:layout_marginStart="33dp"
                android:background="@drawable/sing_up_button"
                android:text="@string/next"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="39dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/SingUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/already_question" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="19sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>